# Oxidal

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml
packaging/linux/: make-deb.sh  oxidal.desktop
packaging/macos/: make-dmg.sh
packaging/windows/: oxidal.iss
src/: app.rs  assets.rs  credentials.rs  host_keys.rs  main.rs  session.rs  session_dialog.rs  settings.rs  settings_view.rs  ssh_client.rs  update.rs
src/sftp/: client.rs  mod.rs  panel.rs
src/terminal/: backend.rs  grid.rs  local.rs  mod.rs  serial.rs  ssh.rs  stats.rs  view.rs
