[package]
name = "Oxidal"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
async-channel = "2"
vte = "0.13"
portable-pty = "0.8"
russh = "0.51"
russh-sftp = "2"
serialport = "4"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "fs"] }
