[package]
name = "Oxidal"
version = "0.3.2"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
secrecy = "0.10"
zeroize = "1"
async-channel = "2"
vte = "0.13"
portable-pty = "0.8"
russh = "0.51"
russh-sftp = "2"
serialport = "4"
chrono = "0.4"
open = "5"
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "fs"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 0
strip = "symbols"
panic = "abort"
incremental = false
overflow-checks = false
debug-assertions = false
